--- a/exercicios/5-exercicio-projeto-aula/index.html
+++ b/exercicios/5-exercicio-projeto-aula/index.html
@@ -22,6 +22,12 @@
                 <td>Paula</td>
                 <td>itsalle</td>
             </tbody>
+            <tbody>
+                <tr>
+                    <th>Gisele</th>
+                    <th>Giselz</th>
+                </tr>
+            </tbody>
         </table>
     </div>
 </body>
